[package]
name = "rust-template-llvm-cov-test"
version = "0.1.0"
edition = "2021"
description = "Testing adding llvm-cov to rust-template ci"
repository = "https://github.com/joshrotenberg/rust-template-llvm-cov-test"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
